--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
-        android:background="@mipmap/xiaojin"
+        android:background="@mipmap/ic_launcher"
         android:gravity="center"
         android:orientation="vertical"
         app:autoBack="true"
